--- a/homework_2/style.2_3.css
+++ b/homework_2/style.2_3.css
@@ -1,40 +1,47 @@
 #container{
   margin: 15px;
+
 }
 
 #firstBlock{
   background-color: #5252cb;
   width: 100%;
   height: 300px;
-  text-align: center;
   margin-bottom: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #secondBlock{
   width: 100%;
   height: 300px;
   display: flex;
   justify-content: space-between;
-  text-align: center;
+
 }
 #thirdBlock{
   background-color: #5252cb;
   width: 100%;
+  margin-top: 23px;
   height: 600px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 .widget{
   background-color: #191985;
   width: 33%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 p{
   color: white;
-  padding-top: 130px;
   font-size: 25px;
 }
-.padding{
-  padding-top: 300px;
-}
+
 .one{
   margin-right: 23px;
 }
