--- a/homework_2/style2_1.css
+++ b/homework_2/style2_1.css
@@ -7,10 +7,9 @@
   background-color: #b7e36f;
   width: 150px;
   height: 150px;
-  text-align: center;
-}
-p{
-  padding-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .font1{
   font-family: 'Rubik Pixels', cursive;
@@ -23,6 +22,7 @@ p{
 }
 .font4{
   font-family: 'Fjalla One', sans-serif;
+
 }
 .font5{
   font-family: 'Indie Flower', cursive;
